--- a/hyperapp/common/bundler.resources.yaml
+++ b/hyperapp/common/bundler.resources.yaml
@@ -9,7 +9,7 @@ import:
 - common.visitor:visitor.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 associations: []
 definitions:
   aux_bundler_hooks:
@@ -17,7 +17,7 @@ definitions:
     object: bundler.module
     attr_name: aux_bundler_hooks
   aux_bundler_hooks.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: aux_bundler_hooks
   bundler:
     _type: legacy_type.builtin:attribute
@@ -35,5 +35,5 @@ definitions:
       services.python_object_creg: builtin_service:python_object_creg
       services.types: builtin_service:types
   bundler.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: bundler
