--- a/hyperapp/common/failure.resources.yaml
+++ b/hyperapp/common/failure.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 associations: []
 definitions:
   failed:
@@ -14,7 +14,7 @@ definitions:
     object: failure.module
     attr_name: failed
   failed.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: failed
   failure.module:
     _type: legacy_type.builtin:python_module
