--- a/hyperapp/common/mark.resources.yaml
+++ b/hyperapp/common/mark.resources.yaml
@@ -5,7 +5,7 @@ import:
 - legacy_type.attr_constructors:parameter
 - legacy_type.attr_constructors:service
 - legacy_type.builtin:attribute
-- legacy_type.call:call
+- legacy_type.builtin:call
 - legacy_type.global_command_ctr:global_command_ctr
 - legacy_type.object_command_ctr:object_command_ctr
 - legacy_type.builtin:python_module
@@ -35,5 +35,5 @@ definitions:
     attr_name: mark
 
   mark.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: mark
