--- a/hyperapp/rc/runner.resources.yaml
+++ b/hyperapp/rc/runner.resources.yaml
@@ -6,7 +6,7 @@ import:
   - builtin_service:python_object_creg
   - legacy_type.async_run:async_run
   - legacy_type.builtin:attribute
-  - legacy_type.call:call
+  - legacy_type.builtin:call
   - legacy_type.import_discoverer:using_incomplete_object
   - legacy_type.inspect:attr
   - legacy_type.inspect:call_param
