--- a/hyperapp/resource/fn_to_ref.resources.yaml
+++ b/hyperapp/resource/fn_to_ref.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 associations: []
 definitions:
   fn_to_ref:
@@ -23,5 +23,5 @@ definitions:
       services.mosaic: builtin_service:mosaic
       services.python_object_creg: builtin_service:python_object_creg
   fn_to_ref.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: fn_to_ref
