--- a/hyperapp/resource/partial_ref.resources.yaml
+++ b/hyperapp/resource/partial_ref.resources.yaml
@@ -5,7 +5,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - legacy_type.partial:param
 - legacy_type.partial:partial
 - legacy_type.raw:raw
@@ -28,5 +28,5 @@ definitions:
       services.mark: common.mark:mark.service
       services.mosaic: builtin_service:mosaic
   partial_ref.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: partial_ref
