--- a/hyperapp/resource/test/test_resources/mock_identity.resources.yaml
+++ b/hyperapp/resource/test/test_resources/mock_identity.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - transport.rsa_identity:generate_rsa_identity.service
 associations: []
 definitions:
@@ -22,5 +22,5 @@ definitions:
       services.generate_rsa_identity: transport.rsa_identity:generate_rsa_identity.service
       services.mark: common.mark:mark.service
   mock_identity.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: mock_identity
