--- a/hyperapp/rpc/rpc_call.resources.yaml
+++ b/hyperapp/rpc/rpc_call.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - legacy_type.rpc:param
 - legacy_type.rpc:request
 - transport.transport:transport.service
@@ -28,5 +28,5 @@ definitions:
     object: rpc_call.module
     attr_name: rpc_call_factory
   rpc_call_factory.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: rpc_call_factory
