--- a/hyperapp/rpc/rpc_call.tests.fixtures.resources.yaml
+++ b/hyperapp/rpc/rpc_call.tests.fixtures.resources.yaml
@@ -4,7 +4,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 associations: []
 definitions:
   rpc_call.tests.fixtures.module:
@@ -18,5 +18,5 @@ definitions:
     object: rpc_call.tests.fixtures.module
     attr_name: transport
   transport.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: transport
