--- a/hyperapp/rpc/rpc_endpoint.resources.yaml
+++ b/hyperapp/rpc/rpc_endpoint.resources.yaml
@@ -9,7 +9,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - legacy_type.rpc:error_response
 - legacy_type.rpc:param
 - legacy_type.rpc:request
@@ -44,5 +44,5 @@ definitions:
     object: rpc_endpoint.module
     attr_name: rpc_endpoint_factory
   rpc_endpoint_factory.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: rpc_endpoint_factory
