--- a/hyperapp/rpc/rpc_endpoint.tests.fixtures.resources.yaml
+++ b/hyperapp/rpc/rpc_endpoint.tests.fixtures.resources.yaml
@@ -4,7 +4,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 associations: []
 definitions:
   python_object_creg:
@@ -12,7 +12,7 @@ definitions:
     object: rpc_endpoint.tests.fixtures.module
     attr_name: python_object_creg
   python_object_creg.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: python_object_creg
   rpc_endpoint.tests.fixtures.module:
     _type: legacy_type.builtin:python_module
@@ -25,5 +25,5 @@ definitions:
     object: rpc_endpoint.tests.fixtures.module
     attr_name: transport
   transport.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: transport
