--- a/hyperapp/server/resources_view.fixtures.resources.yaml
+++ b/hyperapp/server/resources_view.fixtures.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
-- legacy_type.call:call
+- legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.resources_view:association_list
 - legacy_type.resources_view:resource_module_association_list
@@ -14,22 +14,22 @@ import:
 associations: []
 definitions:
   AssociationList.piece.parameter:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: piece_2
   ResourceModuleAssociationList.piece.parameter:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: piece_4
   ResourceModuleList.associations.current_key.parameter:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: current_key_2
   ResourceModuleList.piece.parameter:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: piece_1
   ResourceModuleList.variables.current_key.parameter:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: current_key_1
   ResourceModuleVarList.piece.parameter:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: piece_3
   current_key:
     _type: legacy_type.builtin:attribute
