--- a/hyperapp/subprocess/subprocess.resources.yaml
+++ b/hyperapp/subprocess/subprocess.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 associations: []
 definitions:
   subprocess.module:
@@ -22,5 +22,5 @@ definitions:
     object: subprocess.module
     attr_name: subprocess_running
   subprocess_running.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: subprocess_running
