--- a/hyperapp/subprocess/subprocess_transport.resources.yaml
+++ b/hyperapp/subprocess/subprocess_transport.resources.yaml
@@ -10,7 +10,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - transport.identity:parcel_registry.service
 - transport.sync_route_table:route_table.service
 - transport.transport:transport.service
@@ -21,7 +21,7 @@ definitions:
     object: subprocess_transport.module
     attr_name: add_subprocess_server_connection
   add_subprocess_server_connection.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: add_subprocess_server_connection
   subprocess_transport.module:
     _type: legacy_type.builtin:python_module
