--- a/hyperapp/transport/endpoint.resources.yaml
+++ b/hyperapp/transport/endpoint.resources.yaml
@@ -8,7 +8,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - transport.sync_route_table:route_table.service
 associations: []
 definitions:
@@ -28,5 +28,5 @@ definitions:
     object: endpoint.module
     attr_name: endpoint_registry
   endpoint_registry.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: endpoint_registry
