--- a/hyperapp/transport/rsa_identity.resources.yaml
+++ b/hyperapp/transport/rsa_identity.resources.yaml
@@ -5,7 +5,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - legacy_type.rsa_identity:rsa_identity
 - legacy_type.rsa_identity:rsa_parcel
 - legacy_type.rsa_identity:rsa_peer
@@ -54,7 +54,7 @@ definitions:
     object: rsa_identity.module
     attr_name: generate_rsa_identity
   generate_rsa_identity.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: generate_rsa_identity
   rsa_identity.module:
     _type: legacy_type.builtin:python_module
