--- a/hyperapp/transport/sync_route_table.resources.yaml
+++ b/hyperapp/transport/sync_route_table.resources.yaml
@@ -7,7 +7,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - transport.identity:peer_registry.service
 - transport.route_registry:route_registry.service
 - transport.route_table:route_table.module
@@ -18,7 +18,7 @@ definitions:
     object: sync_route_table.module
     attr_name: route_table
   route_table.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: route_table
   sync_route_table.module:
     _type: legacy_type.builtin:python_module
