--- a/hyperapp/transport/tcp_transport.resources.yaml
+++ b/hyperapp/transport/tcp_transport.resources.yaml
@@ -10,7 +10,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - legacy_type.code_registry:association
 - legacy_type.tcp_transport:route
 - transport.identity:parcel_registry.service
@@ -29,7 +29,7 @@ definitions:
     object: tcp_transport.module
     attr_name: tcp_server_factory
   tcp_server_factory.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: tcp_server_factory
   tcp_transport.module:
     _type: legacy_type.builtin:python_module
