--- a/hyperapp/transport/transport.resources.yaml
+++ b/hyperapp/transport/transport.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 - transport.route_registry:route_registry.service
 - transport.sync_route_table:route_table.service
 associations: []
@@ -26,5 +26,5 @@ definitions:
       services.route_registry: transport.route_registry:route_registry.service
       services.route_table: transport.sync_route_table:route_table.service
   transport.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: transport
