--- a/hyperapp/ui/ui_ctl_registry.resources.yaml
+++ b/hyperapp/ui/ui_ctl_registry.resources.yaml
@@ -9,7 +9,7 @@ import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.call:call
+- legacy_type.builtin:call
 associations: []
 definitions:
   ui_ctl_creg:
@@ -17,7 +17,7 @@ definitions:
     object: ui_ctl_registry.module
     attr_name: ui_ctl_creg
   ui_ctl_creg.service:
-    _type: legacy_type.call:call
+    _type: legacy_type.builtin:call
     function: ui_ctl_creg
   ui_ctl_registry.module:
     _type: legacy_type.builtin:python_module
