--- a/hyperapp/rc/code_registry_ctr.resources.yaml
+++ b/hyperapp/rc/code_registry_ctr.resources.yaml
@@ -1,8 +1,9 @@
 import:
 - resource.constructor_creg:constructor_creg.service
 - builtin_service:mosaic
+- builtin_service:python_object_creg
+- builtin_service:web
 - legacy_type.builtin:attribute
-- legacy_type.code_registry:association
 - legacy_type.code_registry:constructor
 - legacy_type.builtin:python_module
 
@@ -24,8 +25,9 @@ definitions:
     file_name: code_registry_ctr.dyn.py
     import_list:
       htypes.builtin.attribute: legacy_type.builtin:attribute
-      htypes.code_registry.association: legacy_type.code_registry:association
       services.mosaic: builtin_service:mosaic
+      services.python_object_creg: builtin_service:python_object_creg
+      services.web: builtin_service:web
 
   construct:
     _type: legacy_type.builtin:attribute
