--- a/hyperapp/ui/qt/window.resources.yaml
+++ b/hyperapp/ui/qt/window.resources.yaml
@@ -2,17 +2,51 @@
 
 import:
 - builtin_service:web
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.command_pane:command_pane
 - legacy_type.menu_bar:menu_bar
+- legacy_type.ui:ui_ctl
 - legacy_type.window:app_layout
 - legacy_type.window:app_state
 - legacy_type.window:layout
 - legacy_type.window:pos
 - legacy_type.window:size
 - legacy_type.window:state
-associations: []
+associations:
+- bases:
+  - legacy_type.window:app_layout
+  key: legacy_type.window:app_layout
+  value: AppCtl.from_piece.ctl
+- bases:
+  - legacy_type.window:layout
+  key: legacy_type.window:layout
+  value: WindowCtl.from_piece.ctl
 definitions:
+  AppCtl:
+    _type: legacy_type.builtin:attribute
+    object: window.module
+    attr_name: AppCtl
+  AppCtl.from_piece:
+    _type: legacy_type.builtin:attribute
+    object: AppCtl
+    attr_name: from_piece
+  AppCtl.from_piece.ctl:
+    _type: legacy_type.ui:ui_ctl
+    ctr_fn: AppCtl.from_piece
+    command_methods: []
+  WindowCtl:
+    _type: legacy_type.builtin:attribute
+    object: window.module
+    attr_name: WindowCtl
+  WindowCtl.from_piece:
+    _type: legacy_type.builtin:attribute
+    object: WindowCtl
+    attr_name: from_piece
+  WindowCtl.from_piece.ctl:
+    _type: legacy_type.ui:ui_ctl
+    ctr_fn: WindowCtl.from_piece
+    command_methods: []
   window.module:
     _type: legacy_type.builtin:python_module
     module_name: window
