--- a/hyperapp/transport/tcp_transport.resources.yaml
+++ b/hyperapp/transport/tcp_transport.resources.yaml
@@ -9,16 +9,22 @@ import:
 - common.failure:failed.service
 - common.mark:mark.service
 - legacy_type.builtin:attribute
-- legacy_type.builtin:python_module
 - legacy_type.builtin:call
-- legacy_type.code_registry:association
+- legacy_type.builtin:python_module
 - legacy_type.tcp_transport:route
 - transport.identity:parcel_registry.service
 - transport.route_registry:route_registry.service
 - transport.sync_route_table:route_table.service
 - transport.tcp_utils:tcp_utils.module
 - transport.transport:transport.service
-associations: []
+associations:
+- bases:
+  - transport.route_registry:route_registry.service
+  - legacy_type.tcp_transport:route
+  key:
+  - transport.route_registry:route_registry.service
+  - legacy_type.tcp_transport:route
+  value: route_from_piece
 definitions:
   route_from_piece:
     _type: legacy_type.builtin:attribute
