--- a/hyperapp/resource/fn_to_ref.fixtures.resources.yaml
+++ b/hyperapp/resource/fn_to_ref.fixtures.resources.yaml
@@ -13,10 +13,10 @@ definitions:
     file_name: fn_to_ref.fixtures.dyn.py
     import_list:
       services.mark: common.mark:mark.service
-  python_object_creg:
+  pyobj_creg:
     _type: legacy_type.builtin:attribute
     object: fn_to_ref.fixtures.module
-    attr_name: python_object_creg
-  python_object_creg.service:
+    attr_name: pyobj_creg
+  pyobj_creg.service:
     _type: legacy_type.builtin:call
-    function: python_object_creg
+    function: pyobj_creg
