--- a/hyperapp/resource/mock_module.resources.yaml
+++ b/hyperapp/resource/mock_module.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- builtin_service:python_object_creg
+- builtin_service:pyobj_creg
 - legacy_type.builtin:attribute
 - legacy_type.mock_module:mock_module
 - legacy_type.builtin:python_module
@@ -9,7 +9,7 @@ associations:
 - bases:
   - legacy_type.mock_module:mock_module
   key:
-  - builtin_service:python_object_creg
+  - builtin_service:pyobj_creg
   - legacy_type.mock_module:mock_module
   value: python_object
 
@@ -19,7 +19,7 @@ definitions:
     module_name: mock_module
     file_name: mock_module.dyn.py
     import_list:
-      services.python_object_creg: builtin_service:python_object_creg
+      services.pyobj_creg: builtin_service:pyobj_creg
   python_object:
     _type: legacy_type.builtin:attribute
     object: mock_module.module
