--- a/hyperapp/resource/raw.resources.yaml
+++ b/hyperapp/resource/raw.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- builtin_service:python_object_creg
+- builtin_service:pyobj_creg
 - builtin_service:web
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
@@ -10,7 +10,7 @@ associations:
 - bases:
   - legacy_type.raw:raw
   key:
-  - builtin_service:python_object_creg
+  - builtin_service:pyobj_creg
   - legacy_type.raw:raw
   value: python_object
 
