--- a/hyperapp/ui/ui_ctl_registry.resources.yaml
+++ b/hyperapp/ui/ui_ctl_registry.resources.yaml
@@ -2,7 +2,7 @@
 
 import:
 - builtin_service:association_reg
-- builtin_service:python_object_creg
+- builtin_service:pyobj_creg
 - builtin_service:types
 - builtin_service:web
 - common.dyn_code_registry:dyn_code_registry.module
@@ -27,6 +27,6 @@ definitions:
       code.dyn_code_registry: common.dyn_code_registry:dyn_code_registry.module
       services.association_reg: builtin_service:association_reg
       services.mark: common.mark:mark.service
-      services.python_object_creg: builtin_service:python_object_creg
+      services.pyobj_creg: builtin_service:pyobj_creg
       services.types: builtin_service:types
       services.web: builtin_service:web
