--- a/hyperapp/rc/ui_ctl.resources.yaml
+++ b/hyperapp/rc/ui_ctl.resources.yaml
@@ -1,10 +1,12 @@
 import:
 - builtin_service:mosaic
+- builtin_service:pyobj_creg
 - legacy_type.builtin:attribute
 - legacy_type.builtin:legacy_type
 - legacy_type.builtin:python_module
 - legacy_type.inspect:record_t
 - legacy_type.ui:ui_ctl
+- ui.ui_ctl_registry:ui_ctl_creg.service
 associations: []
 definitions:
   ui_ctl.module:
@@ -17,3 +19,5 @@ definitions:
       htypes.inspect.record_t: legacy_type.inspect:record_t
       htypes.ui.ui_ctl: legacy_type.ui:ui_ctl
       services.mosaic: builtin_service:mosaic
+      services.pyobj_creg: builtin_service:pyobj_creg
+      services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
