--- a/hyperapp/ui/qt/application.resources.yaml
+++ b/hyperapp/ui/qt/application.resources.yaml
@@ -1,11 +1,14 @@
 # Automatically generated file. Do not edit.
 
 import:
+- builtin_service:web
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.command_pane:command_pane
 - legacy_type.menu_bar:menu_bar
 - legacy_type.ui:ui_ctl
+- legacy_type.window:app_layout
+- legacy_type.window:app_state
 - legacy_type.window:layout
 - legacy_type.window:pos
 - legacy_type.window:size
@@ -13,32 +16,36 @@ import:
 - ui.ui_ctl_registry:ui_ctl_creg.service
 associations:
 - bases:
-  - legacy_type.window:layout
+  - legacy_type.window:app_layout
   key:
   - ui.ui_ctl_registry:ui_ctl_creg.service
-  - legacy_type.window:layout
-  value: WindowCtl.from_piece.ctl
+  - legacy_type.window:app_layout
+  value: AppCtl.from_piece.ctl
 definitions:
-  WindowCtl:
+  AppCtl:
     _type: legacy_type.builtin:attribute
-    object: window.module
-    attr_name: WindowCtl
-  WindowCtl.from_piece:
+    object: application.module
+    attr_name: AppCtl
+  AppCtl.from_piece:
     _type: legacy_type.builtin:attribute
-    object: WindowCtl
+    object: AppCtl
     attr_name: from_piece
-  WindowCtl.from_piece.ctl:
+  AppCtl.from_piece.ctl:
     _type: legacy_type.ui:ui_ctl
-    ctr_fn: WindowCtl.from_piece
+    ctr_fn: AppCtl.from_piece
     command_methods: []
-  window.module:
+  application.module:
     _type: legacy_type.builtin:python_module
-    module_name: window
-    file_name: window.dyn.py
+    module_name: application
+    file_name: application.dyn.py
     import_list:
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
       htypes.menu_bar.menu_bar: legacy_type.menu_bar:menu_bar
+      htypes.window.app_layout: legacy_type.window:app_layout
+      htypes.window.app_state: legacy_type.window:app_state
       htypes.window.layout: legacy_type.window:layout
       htypes.window.pos: legacy_type.window:pos
       htypes.window.size: legacy_type.window:size
       htypes.window.state: legacy_type.window:state
+      services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
+      services.web: builtin_service:web
