--- a/hyperapp/common/mark.resources.yaml
+++ b/hyperapp/common/mark.resources.yaml
@@ -1,7 +1,9 @@
 import:
 - builtin_service:mosaic
+- builtin_service:pyobj_creg
 - legacy_type.attr_constructors:parameter
 - legacy_type.attr_constructors:service
+- legacy_type.attr_constructors:ui_command_ctr
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.global_command_ctr:global_command_ctr
@@ -20,10 +22,12 @@ definitions:
     import_list:
       htypes.attr_constructors.parameter: legacy_type.attr_constructors:parameter
       htypes.attr_constructors.service: legacy_type.attr_constructors:service
+      htypes.attr_constructors.ui_command_ctr: legacy_type.attr_constructors:ui_command_ctr
       htypes.global_command_ctr.global_command_ctr: legacy_type.global_command_ctr:global_command_ctr
       htypes.object_command_ctr.object_command_ctr: legacy_type.object_command_ctr:object_command_ctr
       code.constants: resource.constants:constants.module
       services.mosaic: builtin_service:mosaic
+      services.pyobj_creg: builtin_service:pyobj_creg
 
   mark:
     _type: legacy_type.builtin:attribute
