--- a/hyperapp/rc/ui_command_ctr.resources.yaml
+++ b/hyperapp/rc/ui_command_ctr.resources.yaml
@@ -4,9 +4,14 @@ import:
 - builtin_service:mosaic
 - builtin_service:pyobj_creg
 - builtin_service:types
+- builtin_service:web
 - legacy_type.attr_constructors:ui_command_ctr
 - legacy_type.builtin:attribute
+- legacy_type.builtin:call
 - legacy_type.builtin:python_module
+- legacy_type.builtin:string
+- legacy_type.inspect:attr
+- legacy_type.ui:ui_command_d
 - rc.utils:utils.module
 - resource.constructor_creg:constructor_creg.service
 associations:
@@ -29,7 +34,14 @@ definitions:
     import_list:
       code.utils: rc.utils:utils.module
       htypes.attr_constructors.ui_command_ctr: legacy_type.attr_constructors:ui_command_ctr
+      htypes.builtin.attribute: legacy_type.builtin:attribute
+      htypes.builtin.call: legacy_type.builtin:call
+      htypes.builtin.python_module: legacy_type.builtin:python_module
+      htypes.builtin.string: legacy_type.builtin:string
+      htypes.inspect.attr: legacy_type.inspect:attr
+      htypes.ui.ui_command_d: legacy_type.ui:ui_command_d
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
       services.mosaic: builtin_service:mosaic
       services.pyobj_creg: builtin_service:pyobj_creg
       services.types: builtin_service:types
+      services.web: builtin_service:web
