--- a/hyperapp/ui/qt/window.resources.yaml
+++ b/hyperapp/ui/qt/window.resources.yaml
@@ -3,9 +3,11 @@
 import:
 - common.mark:mark.service
 - legacy_type.builtin:attribute
+- legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.command_pane:command_pane
 - legacy_type.menu_bar:menu_bar
+- legacy_type.ui:ui_command_d
 - legacy_type.ui:ui_ctl
 - legacy_type.window:layout
 - legacy_type.window:pos
@@ -13,6 +15,13 @@ import:
 - legacy_type.window:state
 - ui.ui_ctl_registry:ui_ctl_creg.service
 associations:
+- bases:
+  - legacy_type.ui:ui_command_d
+  - legacy_type.window:layout
+  key:
+  - legacy_type.ui:ui_command_d
+  - legacy_type.window:layout
+  value: duplicate
 - bases:
   - legacy_type.window:layout
   key:
@@ -32,6 +41,13 @@ definitions:
     _type: legacy_type.ui:ui_ctl
     ctr_fn: WindowCtl.from_piece
     command_methods: []
+  duplicate:
+    _type: legacy_type.builtin:attribute
+    object: window.module
+    attr_name: duplicate
+  ui_command_d:
+    _type: legacy_type.builtin:call
+    function: legacy_type.ui:ui_command_d
   window.module:
     _type: legacy_type.builtin:python_module
     module_name: window
