Combine application, window and tabs

--- a/hyperapp/client/client.resources.yaml
+++ b/hyperapp/client/client.resources.yaml
@@ -2,9 +2,13 @@
 
 import:
 - builtin_service:mosaic
+- legacy_type.application:layout
+- legacy_type.application:state
 - legacy_type.builtin:python_module
 - legacy_type.command_pane:command_pane
 - legacy_type.menu_bar:menu_bar
+- legacy_type.tabs:layout
+- legacy_type.tabs:state
 - legacy_type.window:layout
 - legacy_type.window:pos
 - legacy_type.window:size
@@ -17,8 +21,12 @@ definitions:
     module_name: client
     file_name: client.dyn.py
     import_list:
+      htypes.application.layout: legacy_type.application:layout
+      htypes.application.state: legacy_type.application:state
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
       htypes.menu_bar.menu_bar: legacy_type.menu_bar:menu_bar
+      htypes.tabs.layout: legacy_type.tabs:layout
+      htypes.tabs.state: legacy_type.tabs:state
       htypes.window.layout: legacy_type.window:layout
       htypes.window.pos: legacy_type.window:pos
       htypes.window.size: legacy_type.window:size
