--- a/hyperapp/ui/qt/application.resources.yaml
+++ b/hyperapp/ui/qt/application.resources.yaml
@@ -8,6 +8,8 @@ import:
 - legacy_type.builtin:python_module
 - legacy_type.command_pane:command_pane
 - legacy_type.menu_bar:menu_bar
+- legacy_type.tabs:layout
+- legacy_type.tabs:state
 - legacy_type.ui:ui_ctl
 - legacy_type.window:layout
 - legacy_type.window:pos
@@ -43,6 +45,8 @@ definitions:
       htypes.application.state: legacy_type.application:state
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
       htypes.menu_bar.menu_bar: legacy_type.menu_bar:menu_bar
+      htypes.tabs.layout: legacy_type.tabs:layout
+      htypes.tabs.state: legacy_type.tabs:state
       htypes.window.layout: legacy_type.window:layout
       htypes.window.pos: legacy_type.window:pos
       htypes.window.size: legacy_type.window:size
