--- a/hyperapp/ui/qt/window.resources.yaml
+++ b/hyperapp/ui/qt/window.resources.yaml
@@ -1,11 +1,14 @@
 # Automatically generated file. Do not edit.
 
 import:
+- builtin_service:web
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.command_pane:command_pane
 - legacy_type.menu_bar:menu_bar
+- legacy_type.tabs:layout
+- legacy_type.tabs:state
 - legacy_type.ui:ui_ctl
 - legacy_type.window:layout
 - legacy_type.window:pos
@@ -39,8 +42,12 @@ definitions:
     import_list:
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
       htypes.menu_bar.menu_bar: legacy_type.menu_bar:menu_bar
+      htypes.tabs.layout: legacy_type.tabs:layout
+      htypes.tabs.state: legacy_type.tabs:state
       htypes.window.layout: legacy_type.window:layout
       htypes.window.pos: legacy_type.window:pos
       htypes.window.size: legacy_type.window:size
       htypes.window.state: legacy_type.window:state
       services.mark: common.mark:mark.service
+      services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
+      services.web: builtin_service:web
