--- a/hyperapp/subprocess/subprocess_rpc_server.resources.yaml
+++ b/hyperapp/subprocess/subprocess_rpc_server.resources.yaml
@@ -5,7 +5,7 @@ import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
-- resource.fn_to_ref:fn_to_ref.service
+- resource.fn_to_res:fn_to_ref.service
 - resource.partial_ref:partial_ref.service
 - rpc.rpc_call:rpc_call_factory.service
 - rpc.rpc_proxy:rpc_proxy.module
@@ -23,7 +23,7 @@ definitions:
       code.rpc_proxy: rpc.rpc_proxy:rpc_proxy.module
       code.subprocess_rpc_server_main: subprocess.subprocess_rpc_server_main:subprocess_rpc_server_main.module
       services.add_subprocess_server_connection: subprocess.subprocess_transport:add_subprocess_server_connection.service
-      services.fn_to_ref: resource.fn_to_ref:fn_to_ref.service
+      services.fn_to_ref: resource.fn_to_res:fn_to_ref.service
       services.mark: common.mark:mark.service
       services.partial_ref: resource.partial_ref:partial_ref.service
       services.peer_registry: transport.identity:peer_registry.service
