--- a/hyperapp/ui/ui_command.tests.fixtures.resources.yaml
+++ b/hyperapp/ui/ui_command.tests.fixtures.resources.yaml
@@ -7,7 +7,7 @@ import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
-- resource.fn_to_ref:fn_to_res.service
+- resource.fn_to_res:fn_to_res.service
 associations: []
 definitions:
   association_reg:
@@ -23,6 +23,6 @@ definitions:
     file_name: ui_command.tests.fixtures.dyn.py
     import_list:
       services.association_reg: builtin_service:association_reg
-      services.fn_to_res: resource.fn_to_ref:fn_to_res.service
+      services.fn_to_res: resource.fn_to_res:fn_to_res.service
       services.mark: common.mark:mark.service
       services.pyobj_creg: builtin_service:pyobj_creg
