--- a/hyperapp/ui/ui_command.resources.yaml
+++ b/hyperapp/ui/ui_command.resources.yaml
@@ -8,6 +8,7 @@ import:
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.ui:ui_command_d
+- resource.data_to_res:data_to_res.service
 associations: []
 definitions:
   ui_command.module:
@@ -17,6 +18,7 @@ definitions:
     import_list:
       htypes.ui.ui_command_d: legacy_type.ui:ui_command_d
       services.association_reg: builtin_service:association_reg
+      services.data_to_res: resource.data_to_res:data_to_res.service
       services.mark: common.mark:mark.service
       services.pyobj_creg: builtin_service:pyobj_creg
   ui_command_factory:
