--- a/hyperapp/client/client.resources.yaml
+++ b/hyperapp/client/client.resources.yaml
@@ -6,7 +6,7 @@ import:
 - legacy_type.application:state
 - legacy_type.builtin:python_module
 - legacy_type.command_pane:command_pane
-- legacy_type.menu_bar:menu_bar
+- legacy_type.menu_bar:layout
 - legacy_type.tabs:layout
 - legacy_type.tabs:state
 - legacy_type.window:layout
@@ -24,7 +24,7 @@ definitions:
       htypes.application.layout: legacy_type.application:layout
       htypes.application.state: legacy_type.application:state
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
-      htypes.menu_bar.menu_bar: legacy_type.menu_bar:menu_bar
+      htypes.menu_bar.layout: legacy_type.menu_bar:layout
       htypes.tabs.layout: legacy_type.tabs:layout
       htypes.tabs.state: legacy_type.tabs:state
       htypes.window.layout: legacy_type.window:layout
