--- a/hyperapp/client/client.resources.yaml
+++ b/hyperapp/client/client.resources.yaml
@@ -2,6 +2,7 @@
 
 import:
 - builtin_service:mosaic
+- common.context:context.module
 - legacy_type.application:layout
 - legacy_type.application:state
 - legacy_type.builtin:python_module
@@ -22,6 +23,7 @@ definitions:
     module_name: client
     file_name: client.dyn.py
     import_list:
+      code.context: common.context:context.module
       htypes.application.layout: legacy_type.application:layout
       htypes.application.state: legacy_type.application:state
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
