--- a/log-config/client.yaml
+++ b/log-config/client.yaml
@@ -11,7 +11,7 @@ handlers:
   console:
     class: logging.StreamHandler
     level: INFO
-    formatter: simple
+    formatter: full
     stream: ext://sys.stdout
   file:
     class : logging.handlers.RotatingFileHandler
