--- a/hyperapp/rpc/rpc_call.resources.yaml
+++ b/hyperapp/rpc/rpc_call.resources.yaml
@@ -30,3 +30,10 @@ definitions:
   rpc_call_factory.service:
     _type: legacy_type.builtin:call
     function: rpc_call_factory
+  rpc_submit_factory:
+    _type: legacy_type.builtin:attribute
+    object: rpc_call.module
+    attr_name: rpc_submit_factory
+  rpc_submit_factory.service:
+    _type: legacy_type.builtin:call
+    function: rpc_submit_factory
